2007-02-09  Brandon Hale  <brandon@ubuntu.com>

	* src/dbus-sharp:
	Update bundled dbus-sharp to 0.4.0, dbus-sharp-glib to 0.3.0.

2007-02-04  Brandon Hale  <brandon@ubuntu.com>

	* src/VolumeButton.cs, src/PlayerWindow.cs:
	Update the volume widget from Aaron, set the relief to normal

2007-02-03  Brandon Hale  <brandon@ubuntu.com>

	* src/VolumeButton.cs, src/PlayerWindow.cs:
	Use new volume widget from Aaron Bockover, ported
	to Gtk# from libbacon. This allows you to click and drag
	the volume.

2007-01-25  Priit Laes  <plaes@svn.gnome.org>

	* dbus-sharp/Makefile.am: Make NDesk.DBus.GLib.dll depend on
	NDesk.DBus.dll. This fixes parallel builds, bug #400368.

2007-01-22  Brandon Hale  <brandon@ubuntu.com>
	
	* po/de.po, configure.ac:
	Add German translation by Sebastian Droege

2007-01-20  Johan Svedberg  <johans@gnome.org>

	* src/FindStation.cs:
	Added RowActivated handler for the tags treeview which changes
	to the selected station.

2007-01-20  Brandon Hale  <brandon@ubuntu.com>

	* po/sv.po:
	Add Swedish translation from Daniel Nylander
	* configure.ac:
	Add "sv" to ALL_LINGUAS

2007-01-15  Iain Holmes  <iain@gnome.org>

	* src/PlayerWindow.cs: Patch from Łukasz Jernaś to fix icons in a
	custom prefix.

2007-01-13  Brandon Hale  <brandon@ubuntu.com>
	
	* NEWS, configure.ac: Updated for Last Exit 4

2007-01-10  Brandon Hale  <brandon@ubuntu.com>

	* src/SpecialKeys.cs, src/PlayerWindow.cs:
	Patch from Rob Fisher to add support for multimedia keys.

2007-01-08  Brandon Hale  <brandon@ubuntu.com>

	* src/notify-sharp/, src/TrayIcon.cs:
	Patch from Sebastian Dröge on bug #394166 to use notify-sharp
	instead of pinvoking libnotify.

2007-01-06  Brandon Hale  <brandon@ubuntu.com>

	* src/DBusPlayer.cs:
	Implement ChangeStation functionality, this makes us feature complete
	compared to the old DBus code.

2007-01-06  Brandon Hale  <brandon@ubuntu.com>

	* src/DBusRemote, src/DBusPlayer:
	First commit of managed DBus port. Most functionality is missing